--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/REGISTERcubuton"
+    android:background="@drawable/registeraaaaa"
     tools:context=".RegisterActivity">
 
     <Button
@@ -13,6 +13,7 @@
         android:layout_height="49dp"
         android:layout_marginTop="509dp"
         android:layout_marginBottom="173dp"
+        android:background="@drawable/registerbutonregister"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +73,7 @@
     <EditText
         android:id="@+id/acasa"
         android:layout_width="275dp"
-        android:layout_height="20dp"
+        android:layout_height="23dp"
         android:layout_marginStart="69dp"
         android:layout_marginTop="373dp"
         android:layout_marginEnd="82dp"
