Interfata register functionala

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
         android:layout_height="39dp"
         android:drawableStart="@drawable/om"
         android:ems="10"
-        android:hint="Name"
+        android:hint=" Full Name"
         android:inputType="textPersonName"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="36dp"
         android:drawableStart="@drawable/mail"
         android:ems="10"
-        android:hint="Email"
+        android:hint=" Email"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="39dp"
         android:drawableStart="@drawable/telefon"
         android:ems="10"
-        android:hint="Phone"
+        android:hint=" Phone"
         android:inputType="phone"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,7 +73,7 @@
         android:layout_height="36dp"
         android:drawableStart="@drawable/casa"
         android:ems="10"
-        android:hint="Home Address"
+        android:hint=" Home Address"
         android:inputType="textPostalAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
         android:layout_height="35dp"
         android:drawableStart="@drawable/facultate"
         android:ems="10"
-        android:hint="College Address"
+        android:hint=" College Address"
         android:inputType="textPostalAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,7 @@
         android:layout_height="37dp"
         android:drawableStart="@drawable/lacat"
         android:ems="10"
-        android:hint="Password"
+        android:hint=" Password"
         android:inputType="textPassword"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,7 +121,7 @@
         android:layout_height="35dp"
         android:drawableStart="@drawable/lacat"
         android:ems="10"
-        android:hint="Password"
+        android:hint=" Confirm Password"
         android:inputType="textPassword"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
