--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,7 @@
         android:drawableStart="@drawable/om"
         android:ems="10"
         android:hint="Name"
+        android:text="asdasd"
         android:inputType="textPersonName"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +43,7 @@
         android:drawableStart="@drawable/mail"
         android:ems="10"
         android:hint="Email"
+        android:text="test@g.com"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +60,7 @@
         android:drawableStart="@drawable/telefon"
         android:ems="10"
         android:hint="Phone"
+        android:text="asdasdasdasdasd"
         android:inputType="phone"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +79,7 @@
         android:hint="Home Address"
         android:inputType="textPostalAddress"
         android:textSize="14sp"
+        android:text="asfasfasfaf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.513"
@@ -90,6 +94,7 @@
         android:drawableStart="@drawable/facultate"
         android:ems="10"
         android:hint="College Address"
+        android:text="fasdasdasd"
         android:inputType="textPostalAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +113,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="14sp"
+        android:text="123456"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -122,6 +128,7 @@
         android:drawableStart="@drawable/lacat"
         android:ems="10"
         android:hint="Password"
+        android:text="123456"
         android:inputType="textPassword"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
