--- a/app/src/main/res/layout/activity_orase.xml
+++ b/app/src/main/res/layout/activity_orase.xml
@@ -10,9 +10,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_orase"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/addOras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/addOras"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Oras"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
